--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "dashboard",
-  "homepage": ".",
+  "homepage": "https://Keshavsomani999.github.io/DashboardLive",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
